--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wedata@GitHub/template</title>
+    <title>wedata@GitHub/MultiRequester</title>
 
     <link rel="stylesheet" href="../github.css" />
 
@@ -10,15 +10,15 @@
     <script src="github.js"></script>
   </head>
   <body>
-    <h1>wedata@GitHub/template</h1>
-    <p>Description</p>
+    <h1>wedata@GitHub/MultiRequester</h1>
+    <p>Site information to extract results from the site</p>
 
     <h2>Database</h2>
-    <p><a href="http://wedata.github.io/template/items.json">http://wedata.github.io/template/items.json</a></p>
+    <p><a href="http://wedata.github.io/MultiRequester/items.json">http://wedata.github.io/MultiRequester/items.json</a></p>
 
     <strong id="last_modified">Last Modified : </strong>
 
     <h2>Repository</h2>
-    <p><a href="https://github.com/wedata/template">https://github.com/wedata/template</a></p>
+    <p><a href="https://github.com/wedata/MultiRequester">https://github.com/wedata/MultiRequester</a></p>
   </body>
 </html>
